--- a/app/src/main/res/layout/layout_detail_menu_button_add_to_cart.xml
+++ b/app/src/main/res/layout/layout_detail_menu_button_add_to_cart.xml
@@ -1,48 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/btn_add_to_cart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="10dp"
         android:paddingVertical="18dp"
-        android:textColor="@color/md_theme_light_onBackground"
         android:text="@string/button_add_to_cart"
-        android:textStyle="bold"/>
+        android:textColor="@color/md_theme_light_onBackground"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <LinearLayout
         android:id="@+id/ly_counter_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/btn_add_to_cart"
-        android:orientation="horizontal"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginBottom="8dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@id/btn_add_to_cart">
+
         <ImageButton
+            android:layout_marginStart="8dp"
             android:id="@+id/btn_sub_item"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:background="@drawable/ic_btn_minus" />
+
         <TextView
             android:id="@+id/tv_total_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingHorizontal="15dp"
             android:text="@string/sum"
-            android:textSize="20sp"
             android:textColor="@color/md_theme_light_onBackground"
-            android:paddingHorizontal="15dp"/>
+            android:textSize="20sp" />
 
         <ImageButton
             android:id="@+id/btn_add_item"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:background="@drawable/ic_btn_plus"/>
+            android:background="@drawable/ic_btn_plus" />
 
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/edit_text_notes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="8dp"
+            android:hint="@string/notes_cart"
+            android:padding="10dp"
+            android:background="@drawable/bg_rounded_border_transparent"
+            android:inputType="text"
+            android:maxLines="3"
+            android:textSize="14sp"
+            />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
