--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -86,6 +86,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginEnd="16dp"
                 android:text="@string/button_checkout_cart"
+                android:textColor="@color/md_theme_light_onBackground"
                 android:textSize="18sp"
                 android:paddingHorizontal="32dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
