--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -61,4 +61,5 @@
     <color name="md_theme_dark_surfaceTint">#FFB3AF</color>
     <color name="md_theme_dark_outlineVariant">#534342</color>
     <color name="md_theme_dark_scrim">#000000</color>
+    <color name="transparent">#00FFFFFF</color>
 </resources>
