Updated homepage feature and menu details feature to get a data connection from the API

--- a/app/src/main/res/layout/item_menu_list.xml
+++ b/app/src/main/res/layout/item_menu_list.xml
@@ -33,6 +33,7 @@
             android:maxLines="1"
             android:textSize="16sp"
             android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_menu_img"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Nasi Goreng" />
@@ -42,11 +43,12 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginTop="2dp"
+            android:layout_marginBottom="8dp"
             android:ellipsize="end"
             android:maxLines="1"
             android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/iv_menu_img"
             app:layout_constraintTop_toBottomOf="@id/tv_menu_name"
             tools:text="Rp.80000,00" />
