--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -14,7 +14,16 @@
         app:cardCornerRadius="8dp"
         app:cardElevation="2dp">
 
+        <include
+            android:id="@+id/layout_state"
+            layout="@layout/layout_content_state"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintVertical_bias="0.0"
+            tools:layout_editor_absoluteX="25dp" />
+
         <com.google.android.material.imageview.ShapeableImageView
+
             android:id="@+id/iv_category_img"
             android:layout_width="80dp"
             android:layout_height="80dp"
