--- a/app/src/main/res/layout/layout_content_state_home.xml
+++ b/app/src/main/res/layout/layout_content_state_home.xml
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Cart is Empty"
+        tools:text="No data"
         tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
