--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -54,7 +54,6 @@
             android:layout_height="180dp"
             android:layout_marginVertical="16dp"
             android:scaleType="centerCrop"
-            tools:src="@drawable/img_profile"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />
 
     </LinearLayout>
@@ -70,26 +69,7 @@
             android:id="@+id/name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FBE7E5"
-            android:hint="Name"
-            android:text="@string/name_edit_text"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
-        android:layout_marginTop="24dp"
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/username_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FBE7E5"
-            android:hint="Username"
-            android:text="@string/username_edit_text"/>
+            android:hint="@string/hint_name" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,9 +84,7 @@
             android:id="@+id/email_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FBE7E5"
-            android:hint="Email"
-            android:text="@string/email_edit_text"/>
+            android:hint="@string/hint_email"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -118,13 +96,22 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/no_phone_edit_text"
+            android:id="@+id/password_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FBE7E5"
-            android:hint="Number Phone"
-            android:text="@string/number_edit_text"/>
+            android:hint="@string/hint_password"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tv_logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/text_logout"
+        android:layout_marginTop="24dp"
+        android:textSize="16sp"
+        android:layout_gravity="center"
+        android:textColor="@color/design_default_color_error"
+        />
 
 </LinearLayout>
