--- a/app/src/main/res/layout/layout_home_header.xml
+++ b/app/src/main/res/layout/layout_home_header.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="4dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:padding="4dp">
 
     <ImageView
         android:id="@+id/iv_food"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="4dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:src="@drawable/ic_food"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,17 +19,16 @@
         android:id="@+id/tv_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="4dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="@string/text_header"
         android:textSize="18sp"
-        android:maxLines="1"
-        android:ellipsize="end"
         android:textStyle="bold"
-        android:layout_marginTop="4dp"
-        android:layout_marginHorizontal="8dp"
-        app:layout_constraintStart_toEndOf="@id/iv_food"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toEndOf="@id/iv_food"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_desc"
@@ -38,15 +37,13 @@
         android:layout_marginHorizontal="8dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="4dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="@string/desc_header"
         android:textSize="12sp"
-        android:maxLines="1"
-        android:ellipsize="end"
-        app:layout_constraintStart_toEndOf="@id/iv_food"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_food"
+        app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
