--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -77,7 +77,8 @@
             android:id="@+id/btn_change_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/text_change_profile" />
+            android:text="@string/text_change_profile"
+            android:textColor="@color/md_theme_light_onBackground"/>
 
         <com.google.android.material.progressindicator.CircularProgressIndicator
             android:id="@+id/pb_loading"
